Fix img width on mobile

--- a/style.css
+++ b/style.css
@@ -23,6 +23,11 @@ body {
 	background-color: #fff;
 }
 
+blockquote { margin: 0; }
+img {
+  max-width: 80vw;
+}
+
 .rainbow-text {
   background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
   -webkit-background-clip: text;
